[package]
name = "nearlend-nft-contract-wrapper"
version = "0.0.1"
authors = ["mitsori <ducmd.cf@nearlenddao.com>"]
edition = "2018"

[dev-dependencies]
near-sdk = "=3.1.0"
near-contract-standards = "3.2.0"
near-sdk-sim = "=3.1.0"
nearlend-nft-contract = { path = "./nearlend-nft-contract" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
  "nearlend-nft-contract",
]